--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/Users/tangdev/Library/Android/sdk
-flutter.sdk=/Users/tangdev/development/flutter
+sdk.dir=/Users/brian.mcilwain/Library/Android/sdk
+flutter.sdk=/Users/brian.mcilwain/source/flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.buildMode=debug
